<resources>
    <string name="app_name">LaundryYuk!</string>
    <string name="card_pelanggan_id">ID Pelanggan</string>
    <string name="card_pelanggan_nama">Nama Pelanggan</string>
    <string name="card_pelanggan_alamat">Alamat Pelanggan</string>
    <string name="card_pelanggan_nohp">No HP</string>
    <string name="card_pelanggan_hubungi">Hubungi</string>
    <string name="card_pelanggan_lihat">Lihat</string>
    <string name="activity_layanan_header">Tambah Customer</string>
    <string name="activity_layanan_namalengkap">Nama Lengkap</string>
    <string name="activity_layanan_alamat">Alamat</string>
    <string name="activity_layanan_nohp">No HP</string>
    <string name="activity_layanan_cabang">Nama Cabang</string>
    <string name="activity_layanan_simpan">Simpan</string>
    <string name="card_pelanggan_cabang">Nama Cabang</string>
    <string name="card_pegawai_id">ID Pegawai</string>
    <string name="card_pegawai_nama">Nama Pegawai</string>
    <string name="card_pegawai_alamat">Alamat Pegawai</string>
    <string name="card_pegawai_nohp">No HP</string>
    <string name="card_pegawai_terdaftar">Terdaftar</string>
    <string name="card_pegawai_cabang">Cabang</string>
    <string name="activity_tambah_pegawai_header">Tambah Pegawai</string>
    <string name="validasi_nama_pelanggan">"Nama pelanggan "</string>
    <string name="validasi_alamat_pelanggan">Alamat tidak boleh kosong</string>
    <string name="validasi_nohp_pelanggan">No Hp tidak boleh kosong</string>
    <string name="validasi_cabang_pelanggan">Cabang tidak boleh kosong</string>
    <string name="sukses_simpan_pelanggan">Data disimpan</string>
    <string name="gagal_simpan_pelanggan">Data gagal disimpan</string>
    <string name="validasi_nama">Nama tidak boleh kosong</string>
    <string name="validasi_harga">Harga tidak boleh kosong</string>
    <string name="validasi_cabang">Cabang tidak boleh kosong</string>
    <string name="default_web_client_id">348486120489-96t7e54je1ckrg5s40dncf8g943eo9nu.apps.googleusercontent.com</string>
    <string name="pendapatan_bulanan">Pendapatan Bulanan</string>
    <string name="laporan">Laporan</string>
    <string name="layanan">Layanan</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="pegawai">Pegawai</string>
    <string name="cabang">Cabang</string>
    <string name="beranda">Beranda</string>
    <string name="transaksi_baru">Transaksi Baru</string>
    <string name="profil">Profil</string>
    <string name="nama_layanan">Nama Layanan</string>
    <string name="harga_layanan">Harga Layanan</string>
    <string name="pilih_layanan_tambahan">Pilih layanan tambahan</string>
    <string name="hapus">Hapus</string>
    <string name="lihat">Lihat</string>
    <string name="bergabung_pada">Bergabung pada</string>
    <string name="nama_pegawai">Nama pegawai</string>
    <string name="alamat_pegawai">Alamat pegawai</string>
    <string name="total_bayar">Total bayar</string>
    <string name="tambah_layanan">Tambah Layanan</string>
    <string name="data_tambahan_baru">Data Layanan Tambahan Baru</string>
    <string name="subheader_tambahan">Lengkapi data dibawah untuk menambahkan layanan tambahan baru</string>
    <string name="tambah_pelanggan">Tambah Pelanggan</string>
    <string name="data_pelanggan_baru">Data Pelanggan Baru</string>
    <string name="subheader_pelanggan">Lengkapi data dibawah untuk menambahkan pelanggan baru</string>
    <string name="tambah_pegawai">Tambah Pegawai</string>
    <string name="data_pegawai_baru">Data Pegawai Baru</string>
    <string name="subheader_pegawai">Lengkapi data dibawah untuk menambahkan pegawai baru</string>
    <string name="data_layanan_baru">Data Layanan Baru</string>
    <string name="subheader_layanan">Lengkapi data dibawah untuk menambahkan layanan baru</string>
    <string name="tambah_cabang">Tambah Cabang</string>
    <string name="data_cabang_baru">Data Cabang Baru</string>
    <string name="subheader_cabang">Lengkapi data dibawah untuk menambahkan cabang baru</string>
    <string name="nama_cabang">Nama Cabang</string>
    <string name="provinsi">Provinsi</string>
    <string name="kab_kota">Kab/Kota</string>
    <string name="app_subheader">Bersih Sempurna, Kepercayaan Utama</string>
    <string name="welcome">Selamat Datang LaundryYuk!</string>
    <string name="subheader_register">Daftar sekarang! untuk menikmati Semua fitur yang tersedia di LaundryYuk</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="hint_nama_pengguna">Masukkan Nama Pengguna Anda</string>
    <string name="email">Email</string>
    <string name="hint_email">Masukkan Email Anda</string>
    <string name="password">Kata Sandi</string>
    <string name="hint_password">Masukkan Password Anda</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="login_lain">Atau gunakan akun</string>
    <string name="memiliki_akun">Sudah memiliki akun? Login</string>
    <string name="pilih_pelanggan">Pilih Pelanggan</string>
    <string name="search_pelanggan">Cari nama pelanggan...</string>
    <string name="pilih_layanan">Pilih Layanan</string>
    <string name="search_layanan">Cari layanan...</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="tunai">Tunai</string>
    <string name="uang_elektronik">Uang Elektronik</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="subheader_login">Login sekarang! untuk menikmati Semua fitur yang tersedia di LaundryYuk</string>
    <string name="belum_memiliki_akun">Belum memiliki akun? Daftar</string>
    <string name="transaksi_berhasil">Transaksi Berhasil!</string>
    <string name="detail_transaksi">Detail Transaksi</string>
    <string name="detail_harga">Detail Harga</string>
    <string name="tambahan">Tambahan</string>
    <string name="pajak">Pajak 12%</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="cetak">Cetak</string>
    <string name="edit_tambahan">Edit Layanan Tambahan</string>
    <string name="edit_data_tambahan">Edit Data Layanan Tambahan</string>
    <string name="subheader_edit_tambahan">Edit data dengan benar untuk mengubah data layanan tambahan</string>
    <string name="edit_data">Edit Data</string>
    <string name="edit_pelanggan">Edit Pelanggan</string>
    <string name="edit_data_pelanggan">Edit Data Pelanggan</string>
    <string name="subheader_edit_pelanggan">Edit data dengan benar untuk mengubah data pelanggan</string>
    <string name="edit_pegawai">Edit Pegawai</string>
    <string name="edit_data_pegawai">Edit Data Pegawai</string>
    <string name="subheader_edit_pegawai">Edit data dengan benar untuk mengubah data pegawai</string>
    <string name="edit_layanan">Edit Layanan</string>
    <string name="edit_data_layanan">Edit Data Layanan</string>
    <string name="subheader_edit_layanan">Edit data dengan benar untuk mengubah data layanan</string>
    <string name="edit_cabang">Edit Cabang</string>
    <string name="edit_data_cabang">Edit Data Cabang</string>
    <string name="subheader_edit_cabang">Edit data dengan benar untuk mengubah data cabang</string>
    <string name="informasi_pelanggan">Informasi Pelanggan</string>
    <string name="informasi_layanan">Informasi Layanan</string>
    <string name="informasi_tambahan">Informasi Layanan Tambahan</string>
    <string name="proses">Proses</string>
    <string name="search_pegawai">Cari nama pegawai...</string>
    <string name="layanan_utama">Layanan Utama</string>
    <string name="layanan_tambahan">Layanan Tambahan</string>
    <string name="search_laporan">Cari laporan...</string>
    <string name="search_cabang">Cari nama cabang...</string>
    <string name="tambahan_kosong">Tidak ada layanan tambahan</string>
    <string name="subtotal_layanan">Subtotal Layanan</string>
    <string name="pilih_metode_pembayaran">Pilih metode pembayaran</string>
    <string name="bayar">Bayar</string>
    <string name="keluar">Keluar</string>
    <string name="pilih_bahasa">Pilih Bahasa</string>

</resources>