<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main">

    <!-- Background Ilustrasi -->
    <ImageView
        android:id="@+id/illustrationImage"
        android:layout_width="match_parent"
        android:layout_height="296dp"
        android:contentDescription="Illustration"
        android:scaleType="centerCrop"
        android:src="@drawable/login_ilustration" />

    <!-- Form Login Mengambang -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        card_view:cardCornerRadius="24dp"
        android:background="@android:color/white"
        android:padding="24dp"
        android:clipToOutline="true"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:padding="24dp"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Judul -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="20sp"
                    android:fontFamily="@font/inter_bold"
                    android:textColor="#000000" />

                <!-- Subjudul -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subheader_register"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:textColor="#666666"
                    android:fontFamily="@font/inter_medium" />

                <!-- Label Username -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_pengguna"
                    android:layout_marginTop="16dp"
                    android:textColor="#666666"
                    android:fontFamily="@font/inter_semibold" />

                <!-- Input No HP -->
                <EditText
                    android:layout_marginTop="8dp"
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nama_pengguna"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="16dp"
                    android:padding="14dp"
                    android:background="@drawable/edittext_background" />

                <!-- Label Email -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_marginTop="16dp"
                    android:textColor="#666666"
                    android:fontFamily="@font/inter_semibold" />

                <!-- Input email -->
                <EditText
                    android:layout_marginTop="8dp"
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="16dp"
                    android:layout_marginBottom="16dp"
                    android:padding="14dp"
                    android:background="@drawable/edittext_background" />

                <!-- Label Password -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="#666666"
                    android:fontFamily="@font/inter_semibold" />

                <!-- Input Password -->
                <EditText
                    android:layout_marginTop="8dp"
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="16dp"
                    android:padding="14dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edittext_background" />

                <!-- Tombol Lanjutkan -->
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/daftar"
                    android:fontFamily="@font/inter_bold"
                    android:backgroundTint="@color/primary_color"
                    android:textColor="@color/white"
                    android:padding="14dp" />

                <!-- Divider -->
                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/login_lain"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/inter_medium"
                    android:textColor="#999999" />

                <!-- Tombol Google -->
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/btnGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/googlexml"
                    android:fontFamily="@font/inter_bold"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="#000000"
                    android:elevation="2dp"
                    android:padding="12dp" />

                <!-- Bantuan -->
                <TextView
                    android:id="@+id/tvHelp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/memiliki_akun"
                    android:textColor="#1E88E5"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/inter_medium"/>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</FrameLayout>
