<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pegawai.TambahPegawaiActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_tambah_pegawai_header"
        android:fontFamily="@font/inter_bold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="24dp"
        />
    <LinearLayout
        android:id="@+id/containerNama"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_layanan_namalengkap"
            android:fontFamily="@font/inter_medium"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"/>
        <EditText
            android:id="@+id/etTambahNamaPegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_layanan_namalengkap"
            android:textAlignment="textStart"
            android:padding="16dp"
            android:background="@drawable/rounded_et"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/containerAlamat"
        app:layout_constraintTop_toBottomOf="@id/containerNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_layanan_alamat"
            android:fontFamily="@font/inter_medium"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"/>
        <EditText
            android:id="@+id/etTambahAlamatPegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_layanan_alamat"
            android:textAlignment="textStart"
            android:padding="16dp"
            android:background="@drawable/rounded_et"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/containerNoHp"
        app:layout_constraintTop_toBottomOf="@id/containerAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_layanan_nohp"
            android:fontFamily="@font/inter_medium"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"/>
        <EditText
            android:id="@+id/etTambahNoHpPegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_layanan_nohp"
            android:inputType="phone"
            android:textAlignment="textStart"
            android:padding="16dp"
            android:background="@drawable/rounded_et"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/containerCabang"
        app:layout_constraintTop_toBottomOf="@id/containerNoHp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_layanan_cabang"
            android:fontFamily="@font/inter_medium"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"/>
        <EditText
            android:id="@+id/etTambahCabangPegawai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_layanan_cabang"
            android:textAlignment="textStart"
            android:padding="16dp"
            android:background="@drawable/rounded_et"/>
    </LinearLayout>
    <Button
        app:layout_constraintTop_toBottomOf="@id/containerCabang"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_layanan_simpan"
        android:textSize="16sp"
        android:padding="16dp"
        android:layout_marginTop="32dp"
        android:id="@+id/btnSimpanPegawai"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
