<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".tambahan.TambahTambahanActivity"
    android:background="#f9fafb">

    <!-- Background Ilustrasi -->
    <ImageView
        android:id="@+id/illustrationImage"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        android:src="@drawable/buat_pelanggan_ilustration"
        android:contentDescription="Tambah Pelanggan Illustration" />

    <!-- Header yang mengambang di atas ilustrasi -->
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_layanan"
        android:fontFamily="@font/inter_semibold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="28dp"
        />

    <!-- Form Tambah Pelanggan Mengambang -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="1dp"
        android:background="@android:color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Judul Form -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data_tambahan_baru"
                    android:textSize="20sp"
                    android:fontFamily="@font/inter_bold"
                    android:textColor="#000000"
                    android:layout_marginBottom="8dp" />

                <!-- Subjudul -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subheader_tambahan"
                    android:textSize="14sp"
                    android:textColor="#666666"
                    android:fontFamily="@font/inter_medium"
                    android:layout_marginBottom="24dp" />

                <!-- Container Nama -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_layanan"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="16sp"
                    android:textColor="#666666"
                    android:layout_marginBottom="8dp"/>

                <EditText
                    android:id="@+id/etNamaLayananTambahan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_layanan"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="16sp"
                    android:textAlignment="textStart"
                    android:padding="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edittext_background"/>

                <!-- Container No HP -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harga_layanan"
                    android:fontFamily="@font/inter_semibold"
                    android:textSize="16sp"
                    android:textColor="#666666"
                    android:layout_marginBottom="8dp"/>

                <EditText
                    android:id="@+id/etHargaLayananTambahan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/harga_layanan"
                    android:inputType="number"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="16sp"
                    android:textAlignment="textStart"
                    android:padding="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edittext_background"/>
                <!-- Tombol Simpan -->
                <TextView
                    android:id="@+id/btnSimpanTambahan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_layanan_simpan"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:background="@drawable/button_background"
                    android:textColor="#FFFFFF"
                    android:padding="16dp"
                    android:layout_marginBottom="16dp" />

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</FrameLayout>